tests/NormalTests/paczka1/small_fuzzy/17224787.err
Error in line 5: S260 A815 6,0
Error in line 7: S260 A321 20,3
Error in line 9: EiY2SEi7XY A815 36,2
